fix: colors in dark mode

--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -66,7 +66,7 @@ pre[class*="language-"] {
 .token.tag-id,
 .token.selector,
 .token.atrule-id {
-  color: #2d2006;
+  color: var(--code-token-selector);
 }
 
 code.language-javascript,
